added 2 stage of header

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -3,3 +3,17 @@ $gray: #F6F6F6;
 $darkGray: #2F323A;
 $lightGray: #D1D1D3;
 $textPrimary: #171B24;
+
+$globalTrans: all 0.2s ease-in-out;
+//upperHeader
+$upperHeaderTextColor: #5D6066;
+$upperHeaderBgColor: #F6F6F6;
+
+//middleHeader
+$middleHeaderTextColor: #454950;
+
+//width vars
+$desktop: 1440px;
+$bigTablet: 1024px;
+$tablet: 768px;
+$mobile: 360px;
