--- a/client/src/components/Header/UpperHeader/_UpperHeader.module.scss
+++ b/client/src/components/Header/UpperHeader/_UpperHeader.module.scss
@@ -1,6 +1,69 @@
+@import "../../../styles/mixins";
+@import "../../../styles/variables";
+
 .upperHeaderWrapper {
   display: flex;
-  background-color: #8B8D92;
+  background-color: $upperHeaderBgColor;
   justify-content: space-between;
+  align-items: center;
+  padding: 10px 8vw;
+}
 
+.upperHeader__location {
+
+  button {
+    background-color: transparent;
+    border: none;
+    @include font(normal, 500, 15px, 145%);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    color: $upperHeaderTextColor;
+    gap: 8px;
+    transition: $globalTrans;
+
+    svg {
+      margin-bottom: 2px;
+    }
+
+    &:hover {
+      color: $darkGray;
+
+      svg {
+        path {
+          stroke: $darkGray;
+        }
+      }
+    }
+
+  }
+}
+
+.upperHeader__brands {
+  display: flex;
+  gap: 24px;
+  margin: 0;
+
+  li {
+    list-style-type: none;
+
+    a {
+      text-decoration: none;
+      color: $upperHeaderTextColor;
+      @include font(normal, 500, 15px, 145%);
+      transition: $globalTrans;
+
+      &:hover {
+        color: $darkGray;
+      }
+    }
+  }
+}
+
+//
+
+@media screen and (max-width: $tablet) {
+  .brands, .docs {
+    display: none;
+  }
 }
