--- a/client/src/components/Header/MiddleHeader/MiddleHeader.module.scss
+++ b/client/src/components/Header/MiddleHeader/MiddleHeader.module.scss
@@ -89,6 +89,7 @@
       display: none;
     }
     .basketBtn {
+      padding: 10px;
       p {
         display: none;
       }
@@ -98,6 +99,7 @@
 
   .logo {
     order: 1;
+    margin-right: 0;
   }
 
   .searchInput {
