mobile menu create and styled

--- a/client/src/UI/Button/_Button.module.scss
+++ b/client/src/UI/Button/_Button.module.scss
@@ -28,6 +28,9 @@ svg {
     color: #FFFFFF;
 
     svg {
+      line {
+        stroke: #FFFFFF;
+      }
       path {
         stroke: #FFFFFF;
       }
@@ -39,6 +42,9 @@ svg {
     color: $lightGray;
 
     svg {
+      line {
+        stroke: $lightGray;
+      }
       path {
         stroke: $lightGray;
       }
@@ -51,6 +57,9 @@ svg {
     color: #FFFFFF;
 
     svg {
+      line {
+        stroke: $lightGray;
+      }
       path {
         stroke: $lightGray;
       }
@@ -79,6 +88,9 @@ svg {
     color: #FFFFFF;
 
     svg {
+      line {
+        stroke: #FFFFFF;
+      }
       path {
         stroke: #FFFFFF;
       }
@@ -101,6 +113,9 @@ svg {
     color: #FFFFFF;
 
     svg {
+      line {
+        stroke: $lightGray;
+      }
       path {
         stroke: $lightGray;
       }
