--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $gray: #F6F6F6;
 $darkGray: #2F323A;
 $lightGray: #D1D1D3;
 $textPrimary: #171B24;
+$border: #E8E9EA;
 
 $globalTrans: all 0.2s ease-in-out;
 //upperHeader
