--- a/client/src/components/Footer/Footer.module.scss
+++ b/client/src/components/Footer/Footer.module.scss
@@ -56,8 +56,10 @@
     color: white;
 
     &:hover {
-      color: #487dd2;
-      transition: all 0.3s ease-out;
+      @media #{$mouse-device} {
+        color: #487dd2;
+        transition: all 0.3s ease-out;
+      }
     }
   }
 }
