--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -20,3 +20,5 @@ $lowerHeaderTextColor: #454950;
 $desktop: 1024px;
 $tablet: 768px;
 $mobile: 360px;
+
+$mouse-device: "(hover: hover) and (pointer: fine)"
