--- a/client/src/components/Header/MiddleHeader/MiddleHeader.module.scss
+++ b/client/src/components/Header/MiddleHeader/MiddleHeader.module.scss
@@ -28,7 +28,7 @@
   gap: 2px;
   justify-content: flex-end;
 
-  button {
+  .profileBtn, .basketBtn, .ordersBtn {
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -134,3 +134,45 @@
     width: 95%;
   }
 }
+
+//
+.modal_header {
+  @include font(normal, 600, 34px, 130%);
+  text-align: center;
+  margin: 0 0 24px 0;
+}
+
+.modal__input {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 24px;
+
+  label {
+    @include font(normal, 500, 16px, 150%);
+    color: $darkGray;
+    margin-bottom: 8px;
+  }
+}
+
+.modal_forget__password {
+  margin-bottom: 24px;
+  @include font(normal, 500, 15px, 145%);
+  color: $upperHeaderTextColor;
+  border: none;
+  background-color: transparent;
+}
+
+.modal__controls {
+  display: flex;
+  flex-direction: column;
+
+  &_primary {
+    @include button($yellow, transparent);
+    margin-bottom: 12px;
+  }
+
+  &_secondary {
+    @include button(#FFF,  $lightGray);
+  }
+}
+
