--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,4 +1,4 @@
-@import "./assets/fonts/Manrope/manrope.scss";
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 
 body {
   margin: 0;
